stylefix: fix the bg color with horizontal overflow

--- a/blog/compass/sass/partials/_org_custom.scss
+++ b/blog/compass/sass/partials/_org_custom.scss
@@ -31,7 +31,7 @@ $border-radius: $code-padding/2.5;
 
 .gist {
    @extend .verbatim;
-   & .gist-file .gist-data .gist-highlight pre {
+   body.bp & .gist-file .gist-data {
       background-color: #f5f5f5 !important;
    }
 }
